--- a/apps-script/quickstart/index.html
+++ b/apps-script/quickstart/index.html
@@ -1,19 +1,3 @@
-<!--
-Copyright 2018 Google LLC
-
-Licensed under the Apache License, Version 2.0 (the "License");
-you may not use this file except in compliance with the License.
-You may obtain a copy of the License at
-
-    https://www.apache.org/licenses/LICENSE-2.0
-
-Unless required by applicable law or agreed to in writing, software
-distributed under the License is distributed on an "AS IS" BASIS,
-WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-See the License for the specific language governing permissions and
-limitations under the License.
--->
-<!-- [START apps_script_api_quickstart] -->
 <!DOCTYPE html>
 <html>
   <head>
@@ -31,8 +15,8 @@ limitations under the License.
 
     <script type="text/javascript">
       // Client ID and API key from the Developer Console
-      var CLIENT_ID = '<YOUR_CLIENT_ID>';
-      var API_KEY = '<YOUR_API_KEY>';
+      var CLIENT_ID = '<375308133938-n8889mdi72vekan691m477rve994mv16.apps.googleusercontent.com>';
+      var API_KEY = '<AIzaSyC4LZY2r8SVgO6Tfdq-Oxng2Z3I467yR5s>';
 
       // Array of API discovery doc URLs for APIs used by the quickstart
       var DISCOVERY_DOCS = ["https://script.googleapis.com/$discovery/rest?version=v1"];
@@ -160,4 +144,3 @@ limitations under the License.
     </script>
   </body>
 </html>
-<!-- [END apps_script_api_management_quickstart] -->
